tests/Config/Parser/fixtures/annotations/Invalid/InvalidUnion.php
<?php

declare(strict_types=1);

namespace Overblog\GraphQLBundle\Tests\Config\Parser\fixtures\annotations\Invalid;

use Overblog\GraphQLBundle\Annotation as GQL;

/**
 * @GQL\Union(types={"Hero", "Droid", "Sith"})
 */
class InvalidUnion
{
}
